# ChangeLog for x11-misc/tinynotify-send
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/tinynotify-send/ChangeLog,v 1.7 2012/05/05 04:53:52 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> tinynotify-send-1.2.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  tinynotify-send-1.2.1.ebuild:
  Only block libnotify with USE="symlink" if it has USE="symlink" enabled too.

*tinynotify-send-1.2.1 (03 Jan 2012)

  03 Jan 2012; Michał Górny <mgorny@gentoo.org> -tinynotify-send-1.2.ebuild,
  +tinynotify-send-1.2.1.ebuild:
  Version bump. The new version fixes timeout support.

*tinynotify-send-1.2 (02 Jan 2012)

  02 Jan 2012; Michał Górny <mgorny@gentoo.org> -tinynotify-send-1.1.ebuild,
  +tinynotify-send-1.2.ebuild, metadata.xml:
  Version bump. The new version adds timeout support and a manpage.

*tinynotify-send-1.1 (04 Sep 2011)

  04 Sep 2011; Michał Górny <mgorny@gentoo.org>
  -tinynotify-send-1.0.0.ebuild, +tinynotify-send-1.1.ebuild:
  Version bump. The new version introduces action support (and background, as a
  prerequisite).

*tinynotify-send-1.0.0 (29 Aug 2011)

  29 Aug 2011; Michał Górny <mgorny@gentoo.org> -tinynotify-send-0.2.ebuild,
  +tinynotify-send-1.0.0.ebuild:
  Version bump. The new version adds support for --foreground option to wait
  for notification to close.

*tinynotify-send-0.2 (21 Aug 2011)

  21 Aug 2011; Michał Górny <mgorny@gentoo.org> +tinynotify-send-0.2.ebuild,
  +metadata.xml:
  Introduce the first ebuild for tinynotify-send.
