@@ -13,6 +13,6 @@
 			<email>mgorny@gentoo.org</email>
 			<name>Michał Górny</name>
 		</maintainer>
-		<bugs-to>https://github.com/mgorny/tinynotify-send/issues/</bugs-to>
+		<bugs-to>https://bitbucket.org/mgorny/tinynotify-send/issues/</bugs-to>
 	</upstream>
 </pkgmetadata>
