@@ -1,14 +1,14 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/tinynotify-send/tinynotify-send-1.2.1.ebuild,v 1.3 2012/05/05 04:53:52 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/tinynotify-send/tinynotify-send-1.2.1.ebuild,v 1.4 2012/08/31 08:25:22 mgorny Exp $
 
 EAPI=4
 
 inherit autotools-utils
 
 DESCRIPTION="A notification sending utility (using libtinynotify)"
-HOMEPAGE="https://github.com/mgorny/tinynotify-send/"
-SRC_URI="mirror://github/mgorny/${PN}/${P}.tar.bz2"
+HOMEPAGE="https://bitbucket.org/mgorny/tinynotify-send/"
+SRC_URI="mirror://bitbucket/mgorny/${PN}/downloads/${P}.tar.bz2"
 
 LICENSE="BSD"
 SLOT="0"
@@ -20,8 +20,6 @@ RDEPEND="x11-libs/libtinynotify
 	symlink? ( !x11-libs/libnotify[symlink] )"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig"
-
-DOCS=( README )
 
 src_configure() {
 	myeconfargs=(
