@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/tinynotify-send
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/tinynotify-send/ChangeLog,v 1.7 2012/05/05 04:53:52 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/tinynotify-send/ChangeLog,v 1.8 2012/08/31 08:25:22 mgorny Exp $
+
+  31 Aug 2012; Michał Górny <mgorny@gentoo.org> metadata.xml,
+  tinynotify-send-1.2.1.ebuild:
+  Sync to the live ebuild.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> tinynotify-send-1.2.1.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
@@ -40,4 +44,3 @@
   21 Aug 2011; Michał Górny <mgorny@gentoo.org> +tinynotify-send-0.2.ebuild,
   +metadata.xml:
   Introduce the first ebuild for tinynotify-send.
-
